CY - 20200506 Message module + announcement - fix UI distorted due to style.css been overwritten

--- a/mTime/mTime/Content/Other_style.css
+++ b/mTime/mTime/Content/Other_style.css
@@ -230,3 +230,103 @@ td .check-box {
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.35);
     z-index: 10; 
 }
+
+.display_none_important {
+    display: none !important;
+}
+
+.visibility_hidden {
+    visibility: hidden !important;
+}
+
+.rtpt_backbtn {
+    width: initial;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    margin: 0 0 0 10px;
+    font-size: 14px;
+    float: right;
+    border-radius: 5px;
+    background-color: blue;
+    color: #fff;
+    cursor: pointer; 
+}
+
+.rtpt_home_box .rtpt_home_b_linkpart_content {
+    width: 100%;
+    height: auto;
+    margin: 7px 0 7px 0;
+    padding: 12px 5px;
+    float: left;
+    border-radius: 5px 5px;
+}
+
+.message_rt_part .overflow_box {
+    height: 415px;
+    margin: 10px;
+    width: -webkit-fill-available !important;
+}
+
+.message_rt_part .overflow_box .ctr_rtpt_addbox {
+    display: flex;
+    max-width: 90%;
+    margin: auto;
+}
+
+.message_rt_part .overflow_box .ctr_rtpt_addbox .rtpt_label_part {
+    width: 95px;
+    text-align: right;
+    font-size: 14px;
+    margin: 5px;
+}
+
+.message_rt_part .overflow_box .ctr_rtpt_addbox .rtpt_addbox_part {
+    text-align: left;
+    width: -webkit-fill-available;
+    font-size: 14px;
+    margin: 5px;
+}
+
+.message_rt_part .overflow_box .ctr_rtpt_addbox .rtpt_addbox_part .rtpt_addbox_pt_tt {
+    width: 180px;
+    height: 30px;
+    text-align: right;
+    position: absolute;
+    left: 0;
+    line-height: 30px;
+    font-size: 14px; 
+}
+
+.font_bold {
+    font-weight: bold;
+}
+
+.message_rt_part .btn_disabled {
+    width: initial;
+    height: 30px;
+    line-height: 30px;
+    padding: 0 10px;
+    margin: 0 0 0 10px;
+    font-size: 14px;
+    float: right;
+    border-radius: 5px;
+    color: #fff;
+
+    background-color: grey;
+    cursor: default; 
+}
+
+.message_rt_part .rtpt_addbox_pt_error {
+    width: 100%;
+    line-height: 20px;
+    float: left;
+    color: #ff0000;
+    font-size: 12px;
+    text-align: right; 
+}
+
+.datepicker {
+    z-index: 99 !important;
+}
+
